Fixed a bug where sub nav was overlapping + update some visuals

--- a/css/main.scss
+++ b/css/main.scss
@@ -180,6 +180,7 @@ header {
         text-align: center;
         opacity: 0;
         transition: all 0.2s ease-in-out;
+        visibility: collapse;
 
         #github {
             margin-top: 50px;
@@ -189,6 +190,7 @@ header {
     .sub-nav.active {
         right: 0px;
         opacity: 1;
+        visibility: initial;
     }
 
     .sub-nav ul li {
@@ -501,11 +503,22 @@ header {
     .main-project {
         padding: 50px;
 
-        .project-title img {
-            width: 100%;
-            height: 500px;
-            object-fit: cover;
-            border-radius: 20px;
+        .project-image {
+            img {
+                width: 100%;
+                height: 500px;
+                object-fit: cover;
+                border-radius: 20px;
+            }
+        }
+    }
+
+    .main-about {
+        .about-para {
+            p {
+                text-align: center;
+                width: 800px;
+            }
         }
     }
 }
@@ -560,7 +573,7 @@ header {
                 width: 300px;
                 height: 500px;
                 object-fit: cover;
-            border-radius: 20px;
+                border-radius: 20px;
             }
         }
 
@@ -624,14 +637,31 @@ header {
     }
 
     .main-project {
-        .project-title img {
-            height: 300px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        .scroll {
+            .title {
+                background-color: rgba($color: #4d4739, $alpha: 0.5);
+                padding: 20px 20px;
+                // .project-title {
+                //     background-color: $primary-hover-color;
+                // }
+            }
         }
 
         .sub {
             .project-sub-title {
                 text-align: center;
                 margin-bottom: 20px;
+            }
+        }
+    }
+
+    .main-about {
+        .about-para {
+            p {
+                width: 300px;
             }
         }
     }
